fix  upload card mis alignement

--- a/vet-practice-frontend/src/app/pets/components/pet-details/pet-details.component.scss
+++ b/vet-practice-frontend/src/app/pets/components/pet-details/pet-details.component.scss
@@ -13,7 +13,7 @@
   }
 
   .pet-image {
-    height: 300px;
+    height: 400px;
     width: 100%;
     object-fit: contain;
   }
@@ -22,7 +22,7 @@
     margin-bottom: 16px;
 
     .upload-card {
-      width: 100%;
+      width: auto;
       cursor: pointer;
       transition: background-color 0.2s;
 
